# PixelDiT

./: .gitignore  README.md  pyproject.toml
configs/datasets/: cifar10.yaml  imagenet.yaml  mnist.yaml
configs/models/: dit_mnist.yaml  mmdit_mnist.yaml  mmpixeldit_mnist.yaml  pixeldit_mnist.yaml
pixel_dit/: config.py  flow.py  model.py  sample.py  train.py  utils.py
pixel_dit/models/: model_dit.py  model_mmdit.py  model_mmpixeldit.py  model_pixeldit.py
